# gemma-miner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
scripts/: release.sh
src/gemma42/: __init__.py  agent.py  audit.py  cli.py  cloud.py  codebook.py  coercion.py  constitution.py  contracts.py  dataset.py  export.py  failure_log.py  fingerprint.py  gdt.py  kernel.py  llm.py  parsing.py  phases.py  prompts.py  provenance.py  providers.py  reflection.py  refs.py  state.py  stats.py
src/gemma42/autobiography/: __init__.py  store.py
src/gemma42/dashboard/: __init__.py  server.py
src/gemma42/swarm/: __init__.py  adversary.py  auditor.py  base.py  cartographer.py  consolidator.py  curator.py  statistician.py
src/gemma42/tools/: __init__.py  assess_sample_tool.py  autobiography_tool.py  base.py  cloud_tool.py  codebook_tool.py  constitution_tool.py  contract_tool.py  dashboard_tool.py  dataset_tool.py  discover_assets_tool.py  export_tool.py  extract_items_tool.py  extract_text_tool.py  extract_tool.py  extractor_tool.py  file_tool.py  fingerprint_tool.py  finish_tool.py  gdt_tool.py  html_tool.py  http_tool.py  item_tool.py  kernel_tool.py  llm_scrape_tool.py  manifest_tool.py  memory_tool.py  plan_tool.py  queue_tool.py  registry.py  shell_tool.py  swarm_tool.py
src/gemma_miner/: __init__.py  _dotenv.py  agent.py  cli.py  codebook.py  coercion.py  config.py  contracts.py  dataset.py  export.py  failure_log.py  llm.py  memory.py  parsing.py  phases.py  prompts.py  providers.py  state.py  stats.py  tracing.py
src/gemma_miner/tools/: __init__.py  base.py  codebook_tool.py  dataset_tool.py  export_tool.py  extract_items_tool.py  extract_text_tool.py  extract_tool.py  extractor_tool.py  file_tool.py  finish_tool.py  html_tool.py  http_tool.py  item_tool.py  llm_scrape_tool.py  memory_tool.py  plan_tool.py  probe_tool.py  queue_tool.py  registry.py  shell_tool.py
tests/: test_core.py
