[project]
name = "gemma42"
version = "0.1.0"
description = "A structured scraping & dataset-construction agent designed for small open models (Gemma 4) via Together AI or any OpenAI-compatible endpoint."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gemma42 contributors" }]
keywords = ["agent", "scraping", "dataset", "llm", "gemma", "together"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "rich>=13.7",
    "typer>=0.12",
    "pyarrow>=14",
]

[project.optional-dependencies]
hf = ["datasets>=2.18", "huggingface_hub>=0.23"]
parsers = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "striprtf>=0.0.26",
    "EbookLib>=0.18",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version<'3.11'",
]
all = [
    "gemma42[hf,parsers]",
]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
gemma42 = "gemma42.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/gemma42"
Issues = "https://github.com/yourname/gemma42/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma42"]

[tool.ruff]
line-length = 100
target-version = "py310"
