[project]
name = "gemma-miner"
version = "0.1.1"
description = "An autonomous text-to-dataset agent — turns any website or document corpus into a typed, research-grade dataset in minutes. Works with Gemma, Llama, Gemini, GPT and any OpenAI-compatible model."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Moncif EL-Mouden", email = "moncif.el-mouden@u-pec.fr" },
]
keywords = [
    "agent", "agentic", "llm", "scraping", "dataset", "dataset-construction",
    "data-engineering", "open-data", "gemma", "claude-code", "ollama",
    "together", "openrouter", "featherless", "huggingface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "rich>=13.7",
    "typer>=0.12",
    "pyarrow>=14",
    "prompt_toolkit>=3.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
hf = ["datasets>=2.18", "huggingface_hub>=0.23"]
parsers = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "striprtf>=0.0.26",
    "EbookLib>=0.18",
    "PyYAML>=6.0",
]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
]
all = [
    "gemma-miner[hf,parsers,analysis]",
]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
gemma-miner = "gemma_miner.cli:main"

[project.urls]
Homepage      = "https://github.com/moncifem/gemma-miner"
Repository    = "https://github.com/moncifem/gemma-miner"
Issues        = "https://github.com/moncifem/gemma-miner/issues"
Changelog     = "https://github.com/moncifem/gemma-miner/blob/main/CHANGELOG.md"
"Example dataset (CNIL)"           = "https://huggingface.co/datasets/moncefem/cnil-sanctions-2011-2025"
"Example dataset (Clinical AI)"    = "https://huggingface.co/datasets/moncefem/clinical-trials-ai-2000-2025"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma_miner"]

[tool.hatch.build.targets.sdist]
include = [
    "src/gemma_miner",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "runs/",
    ".venv/",
    "dist/",
    "*.egg-info/",
    "**/__pycache__/",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
